# FastGraphCompute

./: .gitignore  README.md  faiss_data_sizes.csv  hnswlib_data_dims.csv  merge_repo.py  pyproject.toml  setup.cfg  setup.py
extensions/: bin_by_coordinates_cpu.cpp  bin_by_coordinates_cuda.cpp  bin_by_coordinates_cuda_kernel.cu  bin_by_coordinates_op.py  index_replacer_cpu.cpp  index_replacer_cuda.cpp  index_replacer_cuda_kernel.cu
fastgraphcompute/: __init__.py  gnn_ops.py  object_condensation.py  temp_gnn_ops.py  torch_geometric_interface.py
graphing/: README.md  annoy_data_cleaned.csv  faiss_data_cleaned.csv  ggnn_data_cleaned.csv  hnswlib_data_cleaned.csv  master_data.csv  process_csvs.py  scann_data_cleaned.csv
ml4reco_modules/: __init__.py  gnn_ops.py  torch_geometric_interface.py
performance/: _comparison.py  annoy_data_dims.csv  binned_knn.py  comparison.py  complete_comparison.py  faiss_data_dims.csv  faiss_data_sizes.csv  generate_annoy_performance.py  generate_faiss_performance.py  generate_hnswlib_performance.py  generate_performance.py  gravnet_perfm.py  hnswlib_data_dims.csv  knn_performance_large.csv  knn_performance_small.csv  oc_helper_helper.py  oc_helpers.py  simple_comparison.py
tests/: Test_bin_by_coordinates.py  Test_binned_select_knn.py  Test_index_replacer.py  Test_index_replacer_cpu.py  Test_select_knn.py  basicTest.py  binning.npy  binning_cuda.npy  coords.npy  coords_cuda.npy  run_bin_by_coordinates.py  select_knn.py  test_all.py  test_bbc_data.npy  test_bin_by_coordinates.py  test_binned_select_knn.py  test_gnn_ops.py  (+7 more)
(+87 files in other folders)
