[metadata]
name = ml4reco_modules
version = 1.0.0
author = Lindsey Gray, Jan Kieseler, Thomas Klijnsma, Shah Rukh Qasim, Ayman Ratey
author_email = jan.kieseler@cern.ch
description = PyTorch Extension Library for HGCAL Specific knn optimizations
keywords = pytorch, knn, geometric-deep-learning, graph-neural-networks, cluster-algorithms
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkiesele/ml4reco_modules
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.6
install_requires =
    torch>=2.4.0
    torchvision>=0.19.0


[options.extras_require]
test =
    pytest
    pytest-cov
    scipy

[options.package_data]
* = *.txt, *.rst, *.md


[sdist]
formats = zip, gztar

[bdist_wheel]
universal = 1
